Nijie Downloader 1.0.9.0
- Fix Issue #43: Remove duplicated page identifier in filename for manga.
- Fix Issue #50: Update parser.

Nijie Downloader 1.0.8.0
- Implement #10: Allow to use list.txt for loading member id for batch jobs.
- Implement #41: Continue with newly added job when the jobs still running.

Nijie Downloader 1.0.7.9
- Fix Issue#40: update member parser.

Nijie Downloader 1.0.7.8
- Update member parser.
- Implement #38 and #39: update 404 handler.
- Update libraries.

Nijie Downloader 1.0.7.7
- Fix Issue #37: Update image parser.

Nijie Downloader 1.0.7.6
- Fix Issue #36: Update image parser.
- Add option to prevent sleep.

Nijie Downloader 1.0.7.5
- Bug Fix: Issue#34, Update image parser.
- Bug Fix: Issue#35, Update bookmark parser.
- Enhancement: Issue#22, Add Delete Completed button.
- Update UI.
- Update unit test.

Nijie Downloader 1.0.7.3
- Bug Fix: Issue#32, update batch job download by tags.

Nijie Downloader 1.0.7.2
- Feature: Issue#26, Remember filename format.
- Bug Fix: Issue#31, update parser for tag search.

Nijie Downloader 1.0.7.0
- Feature: Update member parser to parse image count.
- Feature: Update search parser to parse image count.
- Bug Fix: Update web client to handle url ended with period.
- Bug Fix: Update https handler.
- Bug Fix: Update batch job runner.
- Add test case for parsers.

Nijie Downloader 1.0.6.1
- Feature: Add Member's doujin mode.
- Feature: Add Member's bookmarks mode.
- Enhancement: Add new filenameformat {bookmarkedMemberId} and {bookmarkedMemberName}, only applicable in Member Bookmarks mode.
- Bug Fix: Fix Issue ##21, continue to next image if encounter http error 404/403 for member and tags batch download.

Nijie Downloader 1.0.5.0
- Feature: Add My Bookmarked Members and My Bookmarked Images (Request #19).
- Feature: Add retry count option.
- Enhancement: Refactor download code in library.

Nijie Downloader 1.0.4.0
- Feature: Add option to skip image if already downloaded in DB.