@@ -85,6 +85,9 @@
       <setting name="PreventSleep" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="UseServerDate" serializeAs="String">
+        <value>False</value>
+      </setting>
     </NijieDownloader.UI.Properties.Settings>
     <Nandaka.Common.Properties.Settings>
       <setting name="Timeout" serializeAs="String">
